--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <i class=material-icons>menu</i></button>
 <a id=navTitle class=navbar-brand href=https://blog.coherence.codes/>Coherence's Blog</a>
 <button type=button class=nav-darkmode-toggle id=darkModeToggleButton2>
-<i class=material-icons id=darkModeToggleIcon2>dark_mode</i></button></div></nav><div class=single-column-header-container id=pageHead v-bind:style="{ transform: 'translateZ(0px) translateY('+.3*scrollY+'px)', opacity: 1-navOpacity }"><a href=https://blog.coherence.codes/><div class=single-column-header-title>Coherence's Blog</div></a></div><div id=content><div id=streamContainer class=stream-container><div class="post-list-container post-list-container-no-background"><a href=/posts/2023/ipv6-%E9%85%8D%E7%BD%AE%E5%85%A5%E9%97%A8/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>IPv6 配置入门</div><div class=post-item-summary></div><div class=post-item-meta>2023-04-16
+<i class=material-icons id=darkModeToggleIcon2>dark_mode</i></button></div></nav><div class=single-column-header-container id=pageHead v-bind:style="{ transform: 'translateZ(0px) translateY('+.3*scrollY+'px)', opacity: 1-navOpacity }"><a href=https://blog.coherence.codes/><div class=single-column-header-title>Coherence's Blog</div></a></div><div id=content><div id=streamContainer class=stream-container><div class="post-list-container post-list-container-no-background"><a href=/posts/2023/%E5%8D%9A%E5%AE%A2%E9%87%8C%E5%BA%94%E8%AF%A5%E5%86%99%E4%BB%80%E4%B9%88/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>博客里应该写什么</div><div class=post-item-summary></div><div class=post-item-meta>2023-04-24
+&emsp;
+&emsp;</div></div></div></div><a href=/posts/2023/ipv6-%E9%85%8D%E7%BD%AE%E5%85%A5%E9%97%A8/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>IPv6 配置入门</div><div class=post-item-summary></div><div class=post-item-meta>2023-04-16
 &emsp;
 &emsp;</div></div></div></div><a href=/posts/2022/hello_hugo/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>Hello, Hugo!</div><div class=post-item-summary></div><div class=post-item-meta>2022-10-02
 &emsp;
@@ -25,8 +27,6 @@
 &emsp;</div></div></div></div><a href=/posts/2021/hackergame_2021_writeup/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>Hackergame 2021 write-up</div><div class=post-item-summary></div><div class=post-item-meta>2021-10-30
 &emsp;
 &emsp;</div></div></div></div><a href=/posts/2021/2020summary_2021plan/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>2020年终总结&amp;2021展望</div><div class=post-item-summary></div><div class=post-item-meta>2021-02-25
-&emsp;
-&emsp;</div></div></div></div><a href=/posts/2021/anki_workflow/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>Anki 工作流</div><div class=post-item-summary></div><div class=post-item-meta>2021-02-24
 &emsp;
 &emsp;</div></div></div></div></a></div></div></div><div id=sideContainer class=side-container><a class="a-block nav-head active" href=https://blog.coherence.codes/><div class=nav-title>Coherence's Blog</div></a><div class=nav-link-list><a class="a-block nav-link-item false" href=/posts>存档</a>
 <a class="a-block nav-link-item false" href=/tags>标签</a>
